# DentSlicerBackup

./: .gitignore  .gitmodules  BlurRectangle.qml  CMakeLists.txt  CameraController.qml  CameraManager.qml  CoordinateMesh.qml  CutBox2.qml  Cutbox.qml  DLPslicer.pro  DLPslicer.pro.user.3f4afff.21  DLPslicer.pro.user.962f46f  DLPslicer.pro.user.fe14732  DLPslicer.rc  DLPslicer.sln  DLPslicer.vcxproj  DLPslicer.vcxproj.filters  DentSlicer.aps  DentSlicer.pro  DentSlicer.sln  DentSlicer.vcxproj  DentSlicer.vcxproj.filters  DentUI.pro  FileDialogLoad.qml  FileTest.qml  GlModel.qml  LeftTab.qml  LeftTabPartList.qml  LeftTabPartListElement.qml  LeftTabSlicingOption.qml  LeftTabSlicingOptionElement.qml  LeftTabViewMode.qml  Lights.qml  MainView.qml  Makefile  Makefile.Debug  Makefile.Release  MeshTransformerMove.qml  MeshTransformerRotate.qml  MeshTransformerRotateTest.qml  (+89 more)
DentEngine/: .gitignore  DLPengine.pro  main.cpp  svgexporter.cpp  svgexporter.h
Mesh/: BVH.cpp  BVH.h  FaceSelectionUtils.cpp  FaceSelectionUtils.h  HixBVH.cpp  HixBVH.h  KDTree.cpp  KDTree.h  MTRayCaster.cpp  MTRayCaster.h  MeshCache.h  MeshIterators.h  RayAccelerator.cpp  RayAccelerator.h  RayCaster.cpp  RayCaster.h  Simplify.cpp  Simplify.h  mesh.cpp  mesh.h
PrinterPresets/: HixC10.json  HixCapsule.json  HixL10.json  HixPNG.json  HixPipeline.json  SN3DDemo.json
Qml/: ArrangePopup.qml  BastardyMenu.qml  Buttons.cpp  Cam.cpp  Cam.h  Cam.qml  CamBox.qml  CameraController.qml  CameraManager.qml  CanvasTest.qml  CoordinateMesh.qml  CtrCutSwitch.qml  CtrDropdownBox.qml  CtrInputBox.qml  CtrLabelTextBox.qml  CtrScaleInputBox.qml  CtrSpinBox.qml  CtrToggleSwitch.qml  CutBox2.qml  Cutbox.qml  DeletePopup.qml  ErrorToast.qml  ExceptionToast.qml  FeatureDivider.qml  FeatureMenu.qml  FeedbackPopUp.qml  FileDialogLoad.qml  GlModel.qml  Inputs.cpp  Inputs.h  LayerViewPopup.qml  LayerViewSlider.qml  LeftPopup.cpp  LeftPopup.h  LeftPopup.qml  LeftPopupArrange.qml  LeftPopupCut.qml  LeftPopupExport.qml  LeftPopupExtend.qml  LeftPopupLabel.qml  (+94 more)
Qt/: QtUtils.cpp  QtUtils.h
Settings/: AdditionalSetting.cpp  AdditionalSetting.h  AppSetting.cpp  AppSetting.h  BasicSetting.cpp  BasicSetting.h  DeployInfo.cpp  DeployInfo.h  JSONParsedSetting.cpp  JSONParsedSetting.h  JSONWriteSetting.cpp  JSONWriteSetting.h  LabelSetting.cpp  LabelSetting.h  LocalSetting.cpp  LocalSetting.h  PrinterSetting.cpp  PrinterSetting.h  SliceSetting.cpp  SliceSetting.h  SupportSetting.cpp  SupportSetting.h
Tasking/: Task.cpp  Task.h  TaskManager.cpp  TaskManager.h
application/: ApplicationManager.cpp  ApplicationManager.h  AuthManager.cpp  AuthManager.h  FeatureManager.cpp  FeatureManager.h  I18nManager.cpp  I18nManager.h  ModalDialogManager.cpp  ModalDialogManager.h  MouseCursorManager.cpp  MouseCursorManager.h  PartManager.cpp  PartManager.h  SceneManager.cpp  SceneManager.h
auth/: AuthManager.cpp  AuthManager.h
bonjour/: About Bonjour.lnk
common/: ContainerTraits.hpp  Debug.cpp  Debug.h  Hasher.h  HetUniquePtr.h  IteratorWrapper.h  RamosEnum.h  RandomAccessContainerBase.h  RandomAccessIteratorBase.h  RandomGen.cpp  Singleton.h  Task.cpp  Task.h  TaskManager.cpp  TaskManager.h  TrackedIndexedList.h  indexedlist.h
debug/: moc_glmodel.cpp  moc_qmlmanager.cpp  moc_quaternionhelper.cpp  moc_slicingengine.cpp  qrc_qml.cpp  qrc_resources.cpp
feature/: CombineModel.cpp  CombineModel.h  CopyPaste.cpp  CopyPaste.h  DrawingPlane.cpp  DrawingPlane.h  Extrude.cpp  Extrude.h  Feature.cpp  Feature.h  FeatureHistoryManager.cpp  FeatureHistoryManager.h  FeaturesLoader.cpp  FeaturesLoader.h  ImportModel.cpp  ImportModel.h  ModelBuilder.cpp  ModelBuilder.h  Plane3D.cpp  Plane3D.h  PoissonRemesh.cpp  PoissonRemesh.h  Shapes2D.cpp  Shapes2D.h  SupportFeature.cpp  SupportFeature.h  TwoManifoldBuilder.cpp  TwoManifoldBuilder.h  UndoRedo.cpp  UndoRedo.h  addModel.cpp  addModel.h  arrange.cpp  arrange.h  autoarrange.cpp  autoarrange.h  autoorientation.cpp  autoorientation.h  convex_hull.cpp  convex_hull.h  (+57 more)
features/: arrange.cpp
input/: Clickable.h  Draggable.cpp  Draggable.h  Highlightable.h  HitTestAble.cpp  HitTestAble.h  Hoverable.cpp  Hoverable.h  KeyboardController.cpp  KeyboardController.h  raycastcontroller.cpp  raycastcontroller.h
manager/: DialogManager.h
packagingTools/: DSBuild.nsi  build.nsi  config.json  copy_pcl.bat  copy_redist.bat  downloader.nsi  license.txt  package.bat  patchnote.html  template.nsi  upload.sh  vs_copy_dll_mingw.bat
render/: Bounds3D.cpp  Bounds3D.h  CircleMeshEntity.cpp  CircleMeshEntity.h  Color.h  GridMeshEntity.cpp  LineMeshEntity.cpp  LineMeshEntity.h  ModelMaterial.cpp  ModelMaterial.h  PlaneMeshEntity.cpp  PlaneMeshEntity.h  PointMeshEntity.cpp  PointMeshEntity.h  SceneEntity.cpp  SceneEntity.h  SceneEntityWithMaterial.cpp  SceneEntityWithMaterial.h  lights.cpp  lights.h
shaders/: default.vert  flat.frag  flat.geom  layerview.frag  layerview.geom  layerview_bottom.frag  layerview_bottom.vert  layerview_infill.frag  layerview_infill.vert  layerview_inner.frag  layerview_inner.vert  layerview_top.frag  layerview_top.vert  lineColor.frag  model_shader.frag  model_shader.geom  model_shader.vert  perPrimitive.geom  singleColor.geom  singleColorImpl.geom  singleColorNoLight.frag  slice.frag  slice.vert
slice/: GLContextFunctionObj.cpp  GLContextFunctionObj.h  InfoWriter.cpp  InfoWriter.h  OpenGLIncludes.h  SlicingOptBackend.cpp  SlicingOptBackend.h  gpuSlicer.cpp  gpuSlicer.h  slicingengine.cpp  slicingengine.h  util.h  vertex.h
src/: CMakeLists.txt  all_files.txt  boundingbox.cpp  fileloader.cpp  fileloader.h  fpstext.h  main.cpp  qml.qrc
support/: BaseSupport.h  ContourModel.cpp  ContourModel.h  CylindricalRaft.cpp  CylindricalRaft.h  DiagInterconnect.cpp  DiagInterconnect.h  Interconnect.cpp  Interconnect.h  ModelAttachedSupport.cpp  ModelAttachedSupport.h  RaftModel.cpp  RaftModel.h  SupportModel.cpp  SupportModel.h  SupportRaftManager.cpp  SupportRaftManager.h  TreeSupportGenerate.cpp  TreeSupportGenerate.h  TreeSupportModel.cpp  TreeSupportModel.h  VerticalSupportModel.cpp  VerticalSupportModel.h
(+562 files in other folders)
