cmake_minimum_required(VERSION 3.19.3)
project(DentSlicer)


find_package(Qt5Core REQUIRED)
find_package(Qt5 COMPONENTS Widgets REQUIRED)
find_package(Qt5SerialPort REQUIRED)
find_package(Qt5Network REQUIRED)
find_package(Qt5Quick REQUIRED)
find_package(Qt5Gui  REQUIRED)
find_package(Qt5Qml REQUIRED)
find_package(Qt5Svg REQUIRED)
find_package(Qt5WebSockets REQUIRED)

if(MSVC)
    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
endif()



set(SOURCES
application/ApplicationManager.cpp
application/ApplicationManager.h
application/FeatureManager.cpp
application/FeatureManager.h
application/I18nManager.cpp
application/I18nManager.h
application/ModalDialogManager.cpp
application/ModalDialogManager.h
application/MouseCursorManager.cpp
application/MouseCursorManager.h
application/PartManager.cpp
application/PartManager.h
application/SceneManager.cpp
application/SceneManager.h
auth/AuthManager.cpp
auth/AuthManager.h
boundingbox.cpp
boundingbox.h
common/ContainerTraits.hpp
common/Debug.cpp
common/Debug.h
common/debugging/DebugRenderObject.cpp
common/debugging/DebugRenderObject.h
common/delaunator.hpp
common/exploreBonjour/bonjourrecord.h
common/exploreBonjour/bonjourservicebrowser.cpp
common/exploreBonjour/bonjourservicebrowser.h
common/exploreBonjour/bonjourserviceresolver.cpp
common/exploreBonjour/bonjourserviceresolver.h
common/exploreBonjour/dns_sd.h
common/glad/include/glad/glad.h
common/glad/include/KHR/khrplatform.h
common/glad/src/glad.c
common/Hasher.h
common/HetUniquePtr.h
common/indexedlist.h
common/IteratorWrapper.h
common/magic_enum.hpp
common/mathUtil.cpp
common/mathUtil.h
common/platform/Process.cpp
common/platform/Process.h
common/RandomAccessContainerBase.h
common/RandomAccessIteratorBase.h
common/RandomGen.cpp
common/RandomGen.h
common/Semaphore.cpp
common/Semaphore.h
common/Singleton.h
common/TrackedIndexedList.h
common/Tree/BVHBuilder.cpp
common/Tree/BVHBuilder.h
common/Tree/LineTree.cpp
common/Tree/LineTree.h
common/Tree/NTree.h
common/Tree/NTreeDeque.h
common/Tree/TreeBuilder.cpp
common/Tree/TreeBuilder.h
feature/addModel.cpp
feature/addModel.h
feature/agCDT/CDT.h
feature/agCDT/CDT.hpp
feature/agCDT/CDTUtils.h
feature/agCDT/CDTUtils.hpp
feature/agCDT/PointRTree.h
feature/agCDT/predicates.h
feature/arrange/autoarrange.cpp
feature/arrange/autoarrange.h
feature/arrange/GuillotineBinPack.cpp
feature/arrange/GuillotineBinPack.h
feature/arrange/MaxRectsBinPack.cpp
feature/arrange/MaxRectsBinPack.h
feature/arrange/Rect.cpp
feature/arrange/Rect.h
feature/arrange/ShelfBinPack.cpp
feature/arrange/ShelfBinPack.h
feature/arrange/ShelfNextFitBinPack.cpp
feature/arrange/ShelfNextFitBinPack.h
feature/arrange/SkylineBinPack.cpp
feature/arrange/SkylineBinPack.h
feature/autoorientation.cpp
feature/autoorientation.h
feature/cdt/HixCDT.cpp
feature/cdt/HixCDT.h
feature/convex_hull.cpp
feature/convex_hull.h
feature/CopyPaste.cpp
feature/CopyPaste.h
feature/CSG/CorkMeshFactory.cpp
feature/CSG/CorkMeshFactory.h
feature/CSG/CSG.h
feature/cut/DrawingPlane.cpp
feature/cut/DrawingPlane.h
feature/cut/FreeCutPtWidget.cpp
feature/cut/FreeCutPtWidget.h
feature/cut/modelcut.cpp
feature/cut/modelcut.h
feature/cut/polylinecut.cpp
feature/cut/polylinecut.h
feature/cut/ZAxialCut.cpp
feature/cut/ZAxialCut.h
feature/deleteModel.cpp
feature/deleteModel.h
feature/extension.cpp
feature/extension.h
feature/Extrude.cpp
feature/Extrude.h
feature/FeatureHistoryManager.cpp
feature/FeatureHistoryManager.h
feature/FeaturesLoader.cpp
feature/FeaturesLoader.h
feature/hollowshell.cpp
feature/hollowshell.h
feature/ImportModel.cpp
feature/ImportModel.h
feature/interfaces/DialogedMode.cpp
feature/interfaces/DialogedMode.h
feature/interfaces/Feature.cpp
feature/interfaces/Feature.h
feature/interfaces/FlushSupport.cpp
feature/interfaces/FlushSupport.h
feature/interfaces/Mode.cpp
feature/interfaces/Mode.h
feature/interfaces/ModeFactory.h
feature/interfaces/PPShaderMode.cpp
feature/interfaces/PPShaderMode.h
feature/interfaces/Progress.cpp
feature/interfaces/Progress.h
feature/interfaces/RangeSliderMode.cpp
feature/interfaces/RangeSliderMode.h
feature/interfaces/SelectFaceMode.cpp
feature/interfaces/SelectFaceMode.h
feature/interfaces/SliderMode.cpp
feature/interfaces/SliderMode.h
feature/interfaces/WidgetMode.cpp
feature/interfaces/WidgetMode.h
feature/label/Labelling.cpp
feature/label/Labelling.h
feature/layerview/CrossSectionPlane.cpp
feature/layerview/CrossSectionPlane.h
feature/layerview/layerview.cpp
feature/layerview/layerview.h
feature/layFlat.cpp
feature/layFlat.h
feature/ModelBuilder/ModelBuilderMode.cpp
feature/ModelBuilder/ModelBuilderMode.h
feature/ModelBuilder/SelectionPlane.cpp
feature/ModelBuilder/SelectionPlane.h
feature/ModelBuilder/TwoManifoldBuilder.cpp
feature/ModelBuilder/TwoManifoldBuilder.h
feature/move.cpp
feature/move.h
feature/overhangDetect.cpp
feature/overhangDetect.h
feature/Plane3D.cpp
feature/Plane3D.h
feature/polyclipping/clipper/clipper.cpp
feature/polyclipping/clipper/clipper.hpp
feature/polyclipping/poly2tri/common/shapes.cc
feature/polyclipping/poly2tri/common/shapes.h
feature/polyclipping/poly2tri/common/utils.h
feature/polyclipping/poly2tri/poly2tri.h
feature/polyclipping/poly2tri/sweep/advancing_front.cc
feature/polyclipping/poly2tri/sweep/advancing_front.h
feature/polyclipping/poly2tri/sweep/cdt.cc
feature/polyclipping/poly2tri/sweep/cdt.h
feature/polyclipping/poly2tri/sweep/sweep.cc
feature/polyclipping/poly2tri/sweep/sweep.h
feature/polyclipping/poly2tri/sweep/sweep_context.cc
feature/polyclipping/poly2tri/sweep/sweep_context.h
feature/polyclipping/polyclipping.cpp
feature/polyclipping/polyclipping.h
feature/polyclipping/QDebugPolyclipping.h
feature/printerServer.cpp
feature/printerServer.h
feature/repair/Algorithms/checkAndRepair.cpp
feature/repair/Algorithms/detectIntersections.cpp
feature/repair/Algorithms/detectIntersections.h
feature/repair/Algorithms/holeFilling.cpp
feature/repair/Algorithms/marchIntersections.cpp
feature/repair/Algorithms/marchIntersections.h
feature/repair/Algorithms/subdivision.cpp
feature/repair/Kernel/basics.h
feature/repair/Kernel/coordinates.cpp
feature/repair/Kernel/coordinates.h
feature/repair/Kernel/graph.cpp
feature/repair/Kernel/graph.h
feature/repair/Kernel/heap.cpp
feature/repair/Kernel/heap.h
feature/repair/Kernel/jqsort.cpp
feature/repair/Kernel/jqsort.h
feature/repair/Kernel/list.cpp
feature/repair/Kernel/list.h
feature/repair/Kernel/matrix.cpp
feature/repair/Kernel/matrix.h
feature/repair/Kernel/orientation.c
feature/repair/Kernel/point.cpp
feature/repair/Kernel/point.h
feature/repair/Kernel/tmesh.cpp
feature/repair/Kernel/tmesh_kernel.h
feature/repair/meshrepair.cpp
feature/repair/meshrepair.h
feature/repair/TMesh/edge.cpp
feature/repair/TMesh/edge.h
feature/repair/TMesh/io.cpp
feature/repair/TMesh/tin.cpp
feature/repair/TMesh/tin.h
feature/repair/TMesh/tmesh.h
feature/repair/TMesh/triangle.cpp
feature/repair/TMesh/triangle.h
feature/repair/TMesh/vertex.cpp
feature/repair/TMesh/vertex.h
feature/rotate.cpp
feature/rotate.h
feature/scale.cpp
feature/scale.h
feature/sendError.cpp
feature/sendError.h
feature/settingMode.cpp
feature/settingMode.h
feature/Shapes2D.cpp
feature/Shapes2D.h
feature/shelloffset.cpp
feature/shelloffset.h
feature/slice/ContourBuilder.cpp
feature/slice/ContourBuilder.h
feature/slice/GLContextFunctionObj.cpp
feature/slice/GLContextFunctionObj.h
feature/slice/gpuSlicer.cpp
feature/slice/gpuSlicer.h
feature/slice/include/camera.h
feature/slice/include/shader.h
feature/slice/include/stb_image_write.h
feature/slice/InfoWriter.cpp
feature/slice/InfoWriter.h
feature/slice/OpenGLIncludes.h
feature/slice/Planes.cpp
feature/slice/Planes.h
feature/slice/sliceExport.cpp
feature/slice/sliceExport.h
feature/slice/sliceExportGPU.cpp
feature/slice/sliceExportGPU.h
feature/slice/slicer.cpp
feature/slice/slicer.h
feature/slice/SlicerDebug.cpp
feature/slice/SlicerDebug.h
feature/slice/SlicerDebugInfoExport.cpp
feature/slice/SlicerDebugInfoExport.h
feature/slice/slicingengine.cpp
feature/slice/slicingengine.h
feature/slice/svgexporter.cpp
feature/slice/svgexporter.h
feature/STL/stlio.hpp
feature/stlexport.cpp
feature/stlexport.h
feature/SupportFeature.cpp
feature/SupportFeature.h
feature/UndoRedo.cpp
feature/UndoRedo.h
feature/zip/zip.cpp
feature/zip/zip.h
feature/zip/zip_file.hpp
fileloader.cpp
fileloader.h
fpstext.cpp
fpstext.h
glmodel.cpp
glmodel.h
input/Clickable.h
input/Draggable.cpp
input/Draggable.h
input/HitTestAble.cpp
input/HitTestAble.h
input/Hoverable.cpp
input/Hoverable.h
input/KeyboardController.cpp
input/KeyboardController.h
input/raycastcontroller.cpp
input/raycastcontroller.h
main.cpp
Mesh/BVH.cpp
Mesh/BVH.h
Mesh/FaceSelectionUtils.cpp
Mesh/FaceSelectionUtils.h
Mesh/HixBVH.cpp
Mesh/HixBVH.h
Mesh/mesh.cpp
Mesh/mesh.h
Mesh/MeshCache.cpp
Mesh/MeshCache.h
Mesh/MeshIterators.h
Mesh/MTRayCaster.cpp
Mesh/MTRayCaster.h
Mesh/RayAccelerator.cpp
Mesh/RayAccelerator.h
Mesh/RayCaster.cpp
Mesh/RayCaster.h
Qml/components/Buttons.cpp
Qml/components/Buttons.h
Qml/components/ControlForwardInclude.h
Qml/components/ControlOwner.cpp
Qml/components/ControlOwner.h
Qml/components/FeatureMenu.cpp
Qml/components/FeatureMenu.h
Qml/components/HixQML.cpp
Qml/components/HixQML.h
Qml/components/InputControl.cpp
Qml/components/InputControl.h
Qml/components/Inputs.cpp
Qml/components/Inputs.h
Qml/components/MainWindow.cpp
Qml/components/MainWindow.h
Qml/components/ModalShell.cpp
Qml/components/ModalShell.h
Qml/components/PartList.cpp
Qml/components/PartList.h
Qml/components/PopupShell.cpp
Qml/components/PopupShell.h
Qml/components/PrintInfo.cpp
Qml/components/PrintInfo.h
Qml/components/SlideBar.cpp
Qml/components/SlideBar.h
Qml/components/Toast.cpp
Qml/components/Toast.h
Qml/components/ViewMode.cpp
Qml/components/ViewMode.h
Qml/functional/QMLSingleton.cpp
Qml/functional/QMLSingleton.h
Qml/ProgressManager.cpp
Qml/ProgressManager.h
Qml/util/QMLUtil.cpp
Qml/util/QMLUtil.h
Qt/QtUtils.cpp
Qt/QtUtils.h
render/Bounds3D.cpp
render/Bounds3D.h
render/CircleMeshEntity.cpp
render/CircleMeshEntity.h
render/Color.h
render/lights.cpp
render/lights.h
render/LineMeshEntity.cpp
render/LineMeshEntity.h
render/ModelMaterial.cpp
render/ModelMaterial.h
render/PlaneMeshEntity.cpp
render/PlaneMeshEntity.h
render/SceneEntity.cpp
render/SceneEntity.h
render/SceneEntityWithMaterial.cpp
render/SceneEntityWithMaterial.h
Settings/AppSetting.cpp
Settings/AppSetting.h
Settings/DeployInfo.cpp
Settings/DeployInfo.h
Settings/JSONParsedSetting.cpp
Settings/JSONParsedSetting.h
Settings/JSONWriteSetting.cpp
Settings/JSONWriteSetting.h
Settings/LocalSetting.cpp
Settings/LocalSetting.h
Settings/PrinterSetting.cpp
Settings/PrinterSetting.h
Settings/SliceSetting.cpp
Settings/SliceSetting.h
Settings/SupportSetting.cpp
Settings/SupportSetting.h
support/BaseSupport.h
support/ContourModel.cpp
support/ContourModel.h
support/CylindricalRaft.cpp
support/CylindricalRaft.h
support/DiagInterconnect.cpp
support/DiagInterconnect.h
support/Interconnect.cpp
support/Interconnect.h
support/ModelAttachedSupport.cpp
support/ModelAttachedSupport.h
support/RaftModel.cpp
support/RaftModel.h
support/SupportModel.cpp
support/SupportModel.h
support/SupportRaftManager.cpp
support/SupportRaftManager.h
support/VerticalSupportModel.cpp
support/VerticalSupportModel.h
Tasking/Task.cpp
Tasking/Task.h
Tasking/TaskManager.cpp
Tasking/TaskManager.h
utils/gridmesh.cpp
utils/gridmesh.h
utils/httpreq.cpp
utils/httpreq.h
utils/linemeshgeometry.cpp
utils/linemeshgeometry.h
utils/mathutils.cpp
utils/mathutils.h
utils/updatechecker.cpp
utils/updatechecker.h
utils/utils.h
widget/CubeWidget.cpp
widget/CubeWidget.h
widget/GridBed.cpp
widget/GridBed.h
widget/Highlightable.h
widget/MoveWidget.cpp
widget/MoveWidget.h
widget/RotateWidget.cpp
widget/RotateWidget.h
widget/Widget.cpp
widget/Widget.h
widget/Widget3D.cpp
widget/Widget3D.h
)

add_executable( ${PROJECT_NAME} ${SOURCES})

target_link_libraries(${PROJECT_NAME}  
Qt5::Widgets
Qt5::Network
Qt5::Gui
Qt5::Qml
Qt5::Svg
Qt5::WebSockets
Qt5::Quick
Qt5::SerialPort
)
